@@ -120,6 +120,9 @@ type package_flag =
   | Pkgflag_LightUninstall (** The package doesn't require downloading to uninstall *)
   | Pkgflag_AllSwitches (** The package is pervasive on all switches *)
   | Pkgflag_Verbose (** The package's scripts output is to be displayed to the user *)
+  | Pkgflag_Plugin (** The package is an opam plugin that will install a
+                       [opam-<name>] exec, and may be auto-installed when doing
+                       [opam <name>] *)
   | Pkgflag_Unknown of string (** Used for error reporting, otherwise ignored *)
 
 (** Flags on dependencies *)
